fixed more of overflow

--- a/src/components/RepositoryPage/RepositoryPage.module.css
+++ b/src/components/RepositoryPage/RepositoryPage.module.css
@@ -35,3 +35,9 @@
 .nickname:hover {
     text-decoration: none;
 }
+.repo_name {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
